tests/neg/dup_param_name.scala
class Main {
  val main = () => {
    val func = (x: Int, x: Int) => x

    func
  }
}